       are still missing, and therefore unsupported in the spooler:

       Canon SELPHY CP520
       Canon SELPHY CP790

	*1: We have not confirmed these printers function with the new
	    backend, but they are presumed to work.

     - Mitsubishi Dye-Sublimation printers:

       Mitsubishi CP3020D/DU/DE (EXPERIMENTAL)
       Mitsubishi CP3020DA/DAE  (EXPERIMENTAL)

	None of these have been tested and confirmed to work (or not), so 
	feedback is welcome.  

     - Kodak Dye-Sublimation printers:

       Kodak 1400

	The Kodak 1400 requires an intelligent spooler/backend, which is
	bundled with this release.

       Kodak 6800 (EXPERIMENTAL)
       Kodak 6850 (EXPERIMENTAL)
       Kodak 605  (EXPERIMENTAL)
       Kodak 805  (EXPERIMENTAL)
       Kodak 9810 (EXPERIMENTAL)
       Kodak 8500 (EXPERIMENTAL)

	None of these have been tested and confirmed to work (or not), so 
	feedback is welcome.  In particular, he 805 is an updated version
	of the 1400, and presumably requires changes to the spooler in order
	to function properly.
	
  2) The following Canon printer models were not added, as they cannot
     currently be supported, even experimentally, owing to an as-yet
     unknown command format or other issues:

       Canon PIXMA PRO-10  *1
       Canon PIXMA PRO-100 *1

       *1: protocol is supported but inks used are not yet supported

  3) Added duplex support for the EPSON WorkForce 645.

  4) Added Catalan translation.

  5) Updated support for the Sony UP-DR150 Photo Printer

	Its output now matches the current Windows drivers.

* Changes from 5.2.8

  1) This release fixes an inappropriate change to the internal
     library version number (.soname or equivalent) made in 5.2.8.
     All distributors should immediately apply this update to their
     distributions to avoid other software linking against
     libgutenprint breaking.

  2) Duplicate Transparency entries in the media types for Canon
     iP4100 and similar printers have been removed.
